ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName5/input.ts.stderr
error: `public` modifier cannot be used here.
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName5/input.ts:2:11
  |
2 | var v = { public get [e]() { } };
  |           ^^^^^^

